chore: remove unused field
